fix footer on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2110,8 +2110,6 @@ h2, h4{
     text-decoration: none; 
     border-bottom-style: dashed; 
     border-bottom-width: 2px;
-    margin-left: 4em;
-    margin-right: 4em;
 }
 .browserchrome:hover{
     color: yellow;
